// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#bundles/molecules/elements/BundleGroupMetaFields renders 1`] = `
<div
  className="col-sm-12 bundle-group-edit__section"
>
  <h1>
    Edit Bundle Group
  </h1>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="id_bundleType"
    >
      Bundle Type
    </label>
    <div>
      <select
        className="form-control"
        disabled={false}
        id="id_bundleType"
        name="bundleType"
        onChange={[Function]}
        value=""
      >
        <option
          key="default"
          value="default"
        >
          Default
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="id_name"
    >
      Name
    </label>
    <div>
      <input
        className="form-control"
        disabled={false}
        id="id_name"
        maxLength={200}
        name="name"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="id_headline"
    >
      Headline
    </label>
    <div>
      <textarea
        className="form-control"
        cols={40}
        disabled={false}
        id="id_headline"
        name="headline"
        onChange={[Function]}
        rows={4}
        value=""
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="id_description"
    >
      Description
    </label>
    <div>
      <textarea
        className="form-control"
        cols={40}
        disabled={false}
        id="id_description"
        name="description"
        onChange={[Function]}
        rows={4}
        value=""
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="id_image"
    >
      Image
    </label>
    <div>
      <span>
        Currently:
         
        <a
          href="https://placeimg.com/640/480/any"
          target="_blank"
        >
          any
        </a>
         
        <input
          checked={false}
          disabled={false}
          id="bundle-edit-form-clear-img"
          onChange={[Function]}
          type="checkbox"
        />
         
        <label
          htmlFor="bundle-edit-form-clear-img"
        >
          Clear
        </label>
      </span>
      <input
        className="form-control"
        disabled={false}
        id="id_image"
        name="image"
        onChange={[Function]}
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`#bundles/molecules/elements/BundleGroupMetaFields renders error messages 1`] = `
<div
  className="col-sm-12 bundle-group-edit__section"
>
  <h1>
    Create Bundle Group
  </h1>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="id_bundleType"
    >
      Bundle Type
    </label>
    <div>
      <select
        className="form-control"
        disabled={false}
        id="id_bundleType"
        name="bundleType"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <div
    className="form-group has-error"
  >
    <label
      className="control-label"
      htmlFor="id_name"
    >
      Name
    </label>
    <div>
      <input
        className="form-control"
        disabled={false}
        id="id_name"
        maxLength={200}
        name="name"
        onChange={[Function]}
        value=""
      />
      <span
        className="help-block"
        key="0"
      >
        <i
          className="icon-exclamation-sign"
        />
         
        Please choose a valid name
      </span>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="id_headline"
    >
      Headline
    </label>
    <div>
      <textarea
        className="form-control"
        cols={40}
        disabled={false}
        id="id_headline"
        name="headline"
        onChange={[Function]}
        rows={4}
        value=""
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="id_description"
    >
      Description
    </label>
    <div>
      <textarea
        className="form-control"
        cols={40}
        disabled={false}
        id="id_description"
        name="description"
        onChange={[Function]}
        rows={4}
        value=""
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="id_image"
    >
      Image
    </label>
    <div>
      <input
        className="form-control"
        disabled={false}
        id="id_image"
        name="image"
        onChange={[Function]}
        type="file"
      />
    </div>
  </div>
</div>
`;
